# structured-context-spec

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  GITHUB-SETUP-CHECKLIST.md  LICENSE  OPEN_QUESTIONS.md  README.md  SECURITY.md  mkdocs.yml
docs/: FAQ.md  MIGRATION-0.3.md  README.md  bundle-lifecycle.md  glossary.yaml  quick-start-guide.md  resources.md  scd-guide.md  scs-commercial-thoughts.pptx  scs-overview.md  validation-guide.md
docs/design/: README.md  (+8 more)
dog-food/: README.md
examples/demo/scs-team/: README.md  pyproject.toml
examples/demo/scs-team/docs/: security-requirements.md
examples/demo/scs-team/src/patient_portal/: database.py
examples/demo/scs-team/src/patient_portal/routes/: patients.py
plugins/: temp-test.md
rfcs/: 0000-template.md  README.md
spec/: CHANGELOG.md
tools/cli/: .gitignore  CHANGELOG.md  CLI-AUDIT-2026-01-01.md  MANIFEST.in  README.md  pyproject.toml  scs-med-adherence.md  setup.py
tools/cli/examples/: README.md
tools/cli/scs_tools/: __init__.py  cli.py
tools/cli/scs_tools/commands/: __init__.py  add.py  bundle.py  init.py  new.py  validate.py
tools/cli/scs_tools/templates/: GETTING_STARTED.md  project-README.md  project.gitignore
tools/cli/scs_tools/templates/bundles/: meta-bundle.yaml  project-bundle.yaml  standards-bundle.yaml
tools/cli/scs_tools/templates/bundles/concerns/: README-company-context.md  architecture.yaml  business-context.yaml  company-context.yaml  compliance-governance.yaml  data-provenance.yaml  deployment-operations.yaml  ethics-ai-accountability.yaml  performance-reliability.yaml  safety-risk.yaml  security.yaml  testing-validation.yaml  usability-accessibility.yaml
tools/cli/scs_tools/templates/bundles/concerns/examples/acme-health/: README.md
tools/cli/scs_tools/templates/bundles/concerns/examples/acme-health/bundles/: company-context.yaml
tools/cli/scs_tools/templates/bundles/concerns/examples/acme-health/scds/: company-overview.yaml
tools/cli/scs_tools/templates/bundles/domains/: software-development.yaml
tools/cli/scs_tools/templates/docs/data-provenance/: data-and-provenance-brief-template.md
tools/cli/scs_tools/templates/scds/: accessibility-compliance.yaml  ai-usage-policy.yaml  audit-requirements.yaml  audit-trail.yaml  authn-authz.yaml  availability.yaml  business-objectives.yaml  chai-adherence.yaml  company-overview.yaml  component-model.yaml  constraints-and-assumptions.yaml  data-handling.yaml  data-model.yaml  data-protection.yaml  error-handling-ux.yaml  fault-tolerance.yaml  hipaa-compliance.yaml  incident-response.yaml  infrastructure-definition.yaml  integration-map.yaml  model-bias.yaml  observability.yaml  opportunity-analysis.yaml  policy-enforcement.yaml  problem-definition.yaml  provenance-tracking.yaml  qa-procedures.yaml  response-time.yaml  retention-policy.yaml  risk-assessment.yaml  safety-checklist.yaml  scalability.yaml  soc2-controls.yaml  stakeholders.yaml  success-criteria.yaml  system-context.yaml  tech-stack.yaml  tefca-participation.yaml  test-coverage.yaml  threat-model.yaml  (+2 more)
tools/cli/scs_tools/utils/: __init__.py  files.py  project_types.py
tools/scd-validator/: README.md  VALIDATOR_OVERVIEW.md  pyproject.toml  requirements-dev.txt  requirements.txt
tools/scd-validator/rules/: README.md
tools/scd-validator/rules/v0.1.0/: bundle-rules.yaml  completeness-rules.yaml  scd-rules.yaml
tools/scd-validator/rules/v0.3.0/: bundle-rules.yaml  completeness-rules.yaml  relationship-rules.yaml
tools/scd-validator/src/scs_validator/: __init__.py  __main__.py  bundle_validator.py  cli.py  completeness_validator.py  parser.py  project_init.py  relationship_validator.py  reporter.py  rules_loader.py  schema_validator.py  semantic_validator.py  utils.py
tools/scd-validator/src/scs_validator/commands/: __init__.py  init.py  validate.py
tools/scd-validator/tests/: __init__.py
tools/scd-validator/tests/fixtures/invalid/: test-invalid.yaml
tools/scd-validator/tests/fixtures/valid/: test-meta-roles.yaml
(+225 files in other folders)
